--- a/style.css
+++ b/style.css
@@ -39,12 +39,20 @@ a{
   text-decoration: none;
   color: #000;
   cursor: pointer; 
+
+  &:hover{
+    opacity: 0.5;
+  }
+
+  &.title{
+    opacity: 1;
+  }
 }
 
 .social-links{
   position: fixed;
   top: 50%;
-  left: 1rem; 
+  left: .5rem; 
   transform: translateY(-50%);
   list-style: none;
   display: flex;
@@ -270,7 +278,7 @@ section{
 .projects__container{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 10rem;
+  column-gap: min(10rem, 10vw);
   row-gap: 5rem;
   margin-bottom: 5rem;
 }
@@ -414,5 +422,126 @@ img{
 
   &:hover{
     text-decoration: underline;
+  }
+}
+
+@media (max-width: 1000px){
+  .hero{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero h1 span{
+    font-size: 5rem;
+  }
+  .sub-content{
+    margin-top: 2rem;
+  }
+  .hero p{
+    text-align: center;
+  }
+  .heading{
+    flex-direction: column;
+    align-items: center;
+  }
+  .subtext{
+    margin-top: 1rem;
+    text-align: center;
+    width: fit-content;
+  }
+
+  .projects{
+    padding-inline: 2rem;
+  }
+  .projects__container{
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+  .item{
+    max-width: 500px;
+  }
+
+  .section-title{
+    text-align: center;
+  }
+  .my_process{
+    padding-inline: 2rem;
+  }
+  .process-grid{
+    grid-template-columns: 1fr;
+    align-self: center;
+  }
+
+  .skillset{
+    font-size: 1.2rem;
+    grid-gap: 1rem;
+  }
+
+  .end-line{
+    font-size: 1rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  .footer p{
+    font-size: 1rem;
+    text-align: center;
+  }
+  .links{
+    gap: 2rem;
+
+    & i{
+      font-size: 1.5rem;
+    }
+  }
+}
+
+@media (max-width: 750px){
+  .social-links{
+    display: none;
+  }
+  a{
+    font-size: 0.9rem;
+  }
+  .hero{
+    text-align: center;
+    padding-top: 15rem;
+    padding-inline: 2rem;
+  }
+  .hero h1{
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .hero h1 span{
+    font-size: 3.5rem;
+    text-align: center;
+  }
+  .hero p{
+    font-size: 0.8rem;
+  }
+  .title h3{
+    font-size: 2rem;
+  }
+  .project__title, .section-title{
+    font-size: 3rem;
+  }
+  .step{
+    width: 100%;
+  }
+  .step h3{
+    font-size: 1.2rem;
+  }
+  .step p{
+    font-size: 1rem;
+  }
+  h3{
+    font-size: 3rem;
+  }
+  .skillset{
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer p{
+    padding-inline: 1rem;
   }
 }
