--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body.preloading{
   color: #000;
   display: flex;
   align-items: baseline;
+  justify-content: center;
 }
 
 .content{
@@ -497,6 +498,9 @@ img{
 }
 
 @media (max-width: 750px){
+  .text{
+    font-size: 1.2rem;
+  }
   .social-links{
     display: none;
   }
